# hiperhealth

./: .all-contributorsrc  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  DEVELOPMENT.md  README.md  mkdocs.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: docs.yaml  main.yaml  release.yaml
conda/: dev-win.yaml  dev.yaml
docs/: changelog.md  contributing.md  example.ipynb  index.md  informed_consent.md  installation.md
migrations/: env.py
migrations/versions/: 16e578626d45_change_previous_tests_to_json.py
research/app/: main.py  reports.py
research/models/: ui.py
scripts/: gen_ref_nav.py
scripts/gen_models/: gen_base.py  gen_sqla.py  gen_sqlmodel.py
src/hiperhealth/: __init__.py  utils.py
src/hiperhealth/agents/: client.py
src/hiperhealth/agents/diagnostics/: core.py
src/hiperhealth/agents/extraction/: medical_reports.py  wearable.py
src/hiperhealth/models/sqla/: fhirx.py
src/hiperhealth/schema/: human_evaluations.py
tests/: __init__.py  conftest.py  test_deidentifier.py  test_extraction_wearable.py  test_main.py  test_medical_reports.py  test_models_fhir_sqla.py  test_models_fhir_sqlmodel.py  test_research_db.py  test_research_schema.py  test_utils.py
